--- a/mysite2/pom.xml
+++ b/mysite2/pom.xml
@@ -41,17 +41,7 @@
   
     <build>
 		<finalName>mysite2</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<url>${tomcat.deploy.url}</url>
-					<server>tomcat-poscodx</server>
-				</configuration>
-			</plugin>
-		</plugins>
+		<!-- tomcat 배포는 부모 pom.xml에 -->
   	</build>
   	
 </project>
