--- a/mysite2/pom.xml
+++ b/mysite2/pom.xml
@@ -18,6 +18,13 @@
 	</properties>
 	
   	<dependencies>
+		<!-- jstl -->
+		<dependency>
+		    <groupId>jstl</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		
 		<!-- mariadb jdbc -->
 		<dependency>
 		    <groupId>org.mariadb.jdbc</groupId>
