--- a/mysite3/pom.xml
+++ b/mysite3/pom.xml
@@ -40,6 +40,13 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
+		<!-- spring aspect -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		
 		<!-- Commonl dbcp -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
