--- a/mysite3/pom.xml
+++ b/mysite3/pom.xml
@@ -55,6 +55,13 @@
 		    <version>1.2</version>
 		</dependency>
 		
+		<!-- jackson -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.13.4.1</version>
+		</dependency>
+
 		<!-- spring jdbc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
