class: mysite6 SpringBoot 최종설정 (custom error)

--- a/mysite6/src/main/resources/application.yml
+++ b/mysite6/src/main/resources/application.yml
@@ -40,6 +40,10 @@ spring:
          max-file-size: 50MB
          max-request-size: 10MB
          
+   error:
+      whitelabel:
+         enabled: false
+      path: /error
          
    # datasource
    datasource:
