class: mysite7 thymeleaf 적용(1)

--- a/mysite7/src/main/resources/application.yml
+++ b/mysite7/src/main/resources/application.yml
@@ -21,6 +21,15 @@ spring:
       #   prefix: /WEB-INF/views/
       #   suffix: .jsp
    
+   # thymeleaf
+   thymeleaf:
+      check-template-location: true
+      mode: HTML
+      prefix: classpath:templates/
+      suffix: .html
+      encoding: UTF-8
+      cache: false
+      
    #web  
    web:
       resources:
